--- a/src/styles/LandingPage.less
+++ b/src/styles/LandingPage.less
@@ -2,6 +2,7 @@
     // CSS Rules
     background-color: @blue;
     // LESS mixins
+    .column;
     // Nested elements in each component
     h6 {
         text-decoration: italic;
